fixed the spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,7 @@ footer {
   padding-bottom: 15px;
 }
 
-.indexPhoto {
+.index-photo {
   max-width: 475px;
   max-height: 505px;
   
